--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <hr color="#fffff"></hr>
     <div class="links">
         </a>
-		<a class="link" href="https://livewire.thewire.in/health/no-win-with-cowin-why-the-vaccine-remains-out-of-reach-for-millions-of-indians/" target="_blank">
-            <i class="fas fa-bookmark">&nbsp;</i>Latest Article: "No Win With CoWIN: Why the Vaccine Remains Out of Reach for Millions of Indians"
+		<a class="link" href="https://theprint.in/campus-voice/jubilation-over-number-of-cctvs-is-bizarre-india-needs-to-make-privacy-laws-not-become-china/725643/" target="_blank">
+            <i class="fas fa-bookmark">&nbsp;</i>Latest Article: "Jubilation over number of CCTVs is bizarre. India needs to make privacy laws, not become China"
         </a>
         <a class="link" href="https://livewire.thewire.in/author/sreedev-krishnakumar/" target="_blank">
             <i class="fas fa-pen-nib">&nbsp;</i>Live Wire Author Profile
