--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
 <hr color="#fffff"></hr>
     <div class="links">
         </a>
-		<a class="link" href="https://theprint.in/campus-voice/jubilation-over-number-of-cctvs-is-bizarre-india-needs-to-make-privacy-laws-not-become-china/725643/" target="_blank">
-            <i class="fas fa-bookmark">&nbsp;</i>Latest Article: "Jubilation over number of CCTVs is bizarre. India needs to make privacy laws, not become China"
+		<a class="link" href="https://coveringdeprivation.acjnewsline.org/trapped-in-the-sugarcane-fields-of-beed/" target="_blank">
+            <i class="fas fa-bookmark">&nbsp;</i>Latest Article: "Trapped in the sugarcane fields of Beed"
+        </a>
+	<a class="link" href="https://theprint.in/author/sreedev-krishnakumar/" target="_blank">
+            <i class="fas fa-pen-nib">&nbsp;</i>The Print Author Profile
         </a>
         <a class="link" href="https://livewire.thewire.in/author/sreedev-krishnakumar/" target="_blank">
             <i class="fas fa-pen-nib">&nbsp;</i>Live Wire Author Profile
