--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
 <hr color="#fffff"></hr>
     <div class="links">
         </a>
+	<a class="link" href="https://www.thecitizen.in/index.php/en/NewsDetail/index/9/21606/Alcohol-Consumption-Falls--Is-Kerala-Getting-High" target="_blank">
+            <i class="fas fa-bookmark">&nbsp;</i>Latest Story: "Alcohol Consumption Falls – Is Kerala Getting High?"
+        </a>
 		<a class="link" href="https://coveringdeprivation.acjnewsline.org/trapped-in-the-sugarcane-fields-of-beed/" target="_blank">
-            <i class="fas fa-bookmark">&nbsp;</i>Latest Article: "Trapped in the sugarcane fields of Beed"
+            <i class="fas fa-bookmark">&nbsp;</i>Covering Deprivation Project: "Trapped in the sugarcane fields of Beed"
+        </a>
+	<a class="link" href="https://www.thecitizen.in/index.php/en/contributor/detail/SREEDEV-KRISHNAKUMAR" target="_blank">
+            <i class="fas fa-pen-nib">&nbsp;</i>The Citizen Author Profile
         </a>
 	<a class="link" href="https://theprint.in/author/sreedev-krishnakumar/" target="_blank">
             <i class="fas fa-pen-nib">&nbsp;</i>The Print Author Profile
