--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
 <hr color="#fffff"></hr>
     <div class="links">
         </a>
+	<a class="link" href="https://muckrack.com/sreedev-krishnakumar-1/portfolio/list" target="_blank">
+            <i class="fas fa-blog">&nbsp;</i>Muckrack Portfolio
+        </a>
+	<a class="link" href="https://nowagestorytelling.shorthandstories.com/navi-mumbai-metro-the-story-of-a-project-that-went-off-track/index.html" target="_blank">
+            <i class="fas fa-bookmark">&nbsp;</i>Investigative Project: "Navi Mumbai Metro: The story of a project that went off-track"
+        </a>
 	<a class="link" href="https://www.thecitizen.in/index.php/en/NewsDetail/index/9/21606/Alcohol-Consumption-Falls--Is-Kerala-Getting-High" target="_blank">
-            <i class="fas fa-bookmark">&nbsp;</i>Latest Story: "Alcohol Consumption Falls – Is Kerala Getting High?"
+            <i class="fas fa-bookmark">&nbsp;</i>Latest Published Story: "Alcohol Consumption Falls – Is Kerala Getting High?"
         </a>
 		<a class="link" href="https://coveringdeprivation.acjnewsline.org/trapped-in-the-sugarcane-fields-of-beed/" target="_blank">
             <i class="fas fa-bookmark">&nbsp;</i>Covering Deprivation Project: "Trapped in the sugarcane fields of Beed"
