--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="description">
-        A graduate in Political Science. Interested in digital rights, tech policy and social justice in India. Currently living in Navi Mumbai. I ocassionally write articles and do some coding.
+   I am a graduate in political science and a student of journalism. Although I am originally from Kerala, I am currently a resident of Navi Mumbai in Maharashtra. I have 16 bylines across four recognised Indian publications (The Hindu, The Citizen, The Print, LiveWire).
     </div>
 <hr color="#fffff"></hr>
     <div class="links">
