--- a/portfolio.html
+++ b/portfolio.html
@@ -39,9 +39,9 @@
 	<![endif]-->
 	
 	<!-- Ignore these -->
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" type="text/css" media="screen" charset="utf-8">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" href="bootstrap.min.css" type="text/css" media="screen" charset="utf-8">
+	<script src="jquery-3.6.0.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
 
 	<style type="text/css" media="screen">
 		/**** Custom Styles	 *****/
@@ -111,37 +111,6 @@ A failed embed will not have dimensions specified, so you don't see an oddly lar
 </head>
 </head>
 <body>
-	
-	<!-- Top Navigation (remove if not needed)
-		================================================== -->
-		<div class="navbar-wrapper">
-			<div class="container">
-				<div class="navbar navbar-inverse navbar-static-top">
-					<div class="container">
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							</button>
-						</div>
-						<div class="navbar-collapse collapse">
-							<ul class="nav navbar-nav">
-								<li><a href="#home">Home</a></li>
-								<li><a href="#about">About Me</a></li>
-								<li><a href="#portfolio">Portfolio</a></li>
-								<li><a href="#resume">Resume</a></li>
-								<li><a href="#contact">Contact</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-
-		<!-- Lead Jumbotron with your name and greeting
-		================================================== -->
 		<div class="container" id="home">
 			<div class="jumbotron">
 			<a class="profilePicture">
@@ -157,7 +126,7 @@ A failed embed will not have dimensions specified, so you don't see an oddly lar
 			<hr class="featurette-divider">
 
 
-			<!-- About Me Section. Remove if needed. Edit white text. -->
+			
 			<div class="featurette" id="about">
 				<h2 class="featurette-heading">About Me</span></h2>
 				<div class="row">
@@ -167,7 +136,7 @@ bylines in my name so far across four publications.</p>
 					</div>
 				</div>
 			</div>
-			<!-- End featurette block -->
+		
 
 			<hr class="featurette-divider">
 
@@ -323,21 +292,11 @@ document.querySelector(".embed-link").addEventListener("click", function (e){
 				<h2 class="featurette-heading">Contact</h2>
 				<div class="row">
 
-					<!-- EMAIL: Use this site to encode your e-mail first, then paste below: http://www.wbwip.com/wbw/emailencoder.html -->
+					
 					<div>
 						<h2><a href="mailto: &#115;&#114;&#101;&#101;&#100;&#101;&#118;&#057;&#056;&#064;&#112;&#114;&#111;&#116;&#111;&#110;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"">&#115;&#114;&#101;&#101;&#100;&#101;&#118;&#057;&#056;&#064;&#112;&#114;&#111;&#116;&#111;&#110;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a></h2>
 					</div>
 
-				</div>
-			</div>
-
-			<hr class="featurette-divider">
-
-
-			<!-- Want more sections? Use these empty tags below. Just put DIV tags inside the class "row" -->
-			<div class="featurette">
-				<h2 class="featurette-heading"><!-- section title --></h2>
-				<div class="row">
 				</div>
 			</div>
 			
@@ -349,11 +308,6 @@ document.querySelector(".embed-link").addEventListener("click", function (e){
 			</footer>
 
 		</div><!-- /.container -->
-
-
-
-		<!-- IGNORE Everything below this line... seriously. You'll just freak out. -->
-
 
 
 		<script type="text/javascript" charset="utf-8">
