--- a/portfolio.html
+++ b/portfolio.html
@@ -294,7 +294,7 @@ document.querySelector(".embed-link").addEventListener("click", function (e){
 
 					
 					<div>
-						<h2><a href="mailto: &#115;&#114;&#101;&#101;&#100;&#101;&#118;&#057;&#056;&#064;&#112;&#114;&#111;&#116;&#111;&#110;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"">&#115;&#114;&#101;&#101;&#100;&#101;&#118;&#057;&#056;&#064;&#112;&#114;&#111;&#116;&#111;&#110;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a></h2>
+						<a href="mailto: &#115;&#114;&#101;&#101;&#100;&#101;&#118;&#057;&#056;&#064;&#112;&#114;&#111;&#116;&#111;&#110;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"">&#115;&#114;&#101;&#101;&#100;&#101;&#118;&#057;&#056;&#064;&#112;&#114;&#111;&#116;&#111;&#110;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a>
 					</div>
 
 				</div>
