--- a/portfolio.html
+++ b/portfolio.html
@@ -278,7 +278,7 @@ document.querySelector(".embed-link").addEventListener("click", function (e){
 
 	var el = document.querySelector("#results");
 	el.setAttribute("class", (myPDF) ? "success" : "fail");
-	el.innerHTML = (myPDF) ? "Here is my resume!" : "Uh-oh, there seems to be an issue with your browser. Please go directly to sreedev98.github.io/Sreedev Krishnakumar_CV.pdf";
+	el.innerHTML = (myPDF) ? "Here is my resume!" : "Uh-oh, there seems to be an issue with your browser. Please go directly to sreedev98.github.io/Sreedev Krishnakumar_CV.pdf or download it directly from below.";
 
 });
 </script>
