--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@ A failed embed will not have dimensions specified, so you don't see an oddly lar
 
 .pdfobject-container {
 	width: 100%;
-	height: 600px;
+	height: auto;
 	margin: 2em 0;
 }
 
@@ -278,7 +278,7 @@ document.querySelector(".embed-link").addEventListener("click", function (e){
 
 	var el = document.querySelector("#results");
 	el.setAttribute("class", (myPDF) ? "success" : "fail");
-	el.innerHTML = (myPDF) ? "Here is my resume!" : "Uh-oh, there seems to be an issue with your browser. Please go directly to sreedev98.github.io/Sreedev Krishnakumar_CV.pdf or download it directly from below.";
+	el.innerHTML = (myPDF) ? "Here is my resume!" : "Uh-oh, you are either browsing from your mobile or there seems to be an issue with your browser. Please go directly to sreedev98.github.io/Sreedev Krishnakumar_CV.pdf or download it directly from below.";
 
 });
 </script>
