--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@ A failed embed will not have dimensions specified, so you don't see an oddly lar
 */
 
 .pdfobject-container {
-	width: 100%;
+	width: 100%; !important
 	height: auto;
 	margin: 2em 0;
 }
