--- a/portfolio.html
+++ b/portfolio.html
@@ -77,11 +77,7 @@
 			border-radius: 60%;
 		}
 	</style>
-	PDFObject appends the classname "pdfobject-container" to the target element.
-This enables you to style the element differently depending on whether the embed was successful.
-In this example, a successful embed will result in a large box.
-A failed embed will not have dimensions specified, so you don't see an oddly large empty box.
-*/
+	<style>
 
 .pdfobject-container {
 	width: 100%;
