--- a/portfolio.html
+++ b/portfolio.html
@@ -79,6 +79,30 @@
 	</style>
 </head>
 <body>
+	<div class="navbar-wrapper">
+			<div class="container">
+				<div class="navbar navbar-inverse navbar-static-top">
+					<div class="container">
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+						</div>
+						<div class="navbar-collapse collapse">
+							<ul class="nav navbar-nav">
+								<li><a href="#home">Home</a></li>
+								<li><a href="#about">About Me</a></li>
+								<li><a href="#portfolio">Portfolio/Clips</a></li>
+								<li><a href="#resume">Resume</a></li>
+								<li><a href="#contact">Contact</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="container" id="home">
 			<div class="jumbotron">
 			<a class="profilePicture">
