--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,6 @@
 	<title>Sreedev Krishnakumar - Portfolio</title>
 	
 	
-	<!-- Basic Google SEO stuff -->
 	<meta name="description" content="The digital portfolio of Sreedev Krishnakumar.">
 	<meta name="keywords" content="Journalism, Sreedev Krishnakumar, Sreedev, Krishnakumar, India, Mumbai, Tamil Nadu, Maharashtra, Kerala, Asian College of Journalism, Data Journalism, Tech Journalism">
 	<meta name="author" content="Sreedev Krishnakumar">
@@ -77,32 +76,86 @@
 			border-radius: 60%;
 		}
 	</style>
+	
+	<style>
+
+.topnav {
+  overflow: hidden;
+  background-color: #333333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+</style>
+	
 </head>
 <body>
-	<div class="navbar-wrapper">
-			<div class="container">
-				<div class="navbar navbar-inverse navbar-static-top">
-					<div class="container">
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							</button>
-						</div>
-						<div class="navbar-collapse collapse">
-							<ul class="nav navbar-nav">
-								<li><a href="#home">Home</a></li>
-								<li><a href="#about">About Me</a></li>
-								<li><a href="#portfolio">Portfolio/Clips</a></li>
-								<li><a href="#resume">Resume</a></li>
-								<li><a href="#contact">Contact</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+
+	<div class="topnav" id="myTopnav">
+  <a href="#home" class="active">Home</a>
+  <a href="#about">About</a>
+  <a href="#portfolio">Portfolio</a>
+  <a href="#resume">Resume</a>
+  <a href="#contact">Contact</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
+
 		<div class="container" id="home">
 			<div class="jumbotron">
 			<a class="profilePicture">
