--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <hr color="#fffff"></hr>
     <div class="links">
         </a>
-	<a class="link" href="https://muckrack.com/sreedev-krishnakumar-1/portfolio/list" target="_blank">
-            <i class="fas fa-blog">&nbsp;</i>Muckrack Portfolio
+	<a class="link" href="https://sreedev98.github.io/portfolio.html" target="_blank">
+            <i class="fas fa-blog">&nbsp;</i>Portfolio
         </a>
 	<a class="link" href="https://nowagestorytelling.shorthandstories.com/navi-mumbai-metro-the-story-of-a-project-that-went-off-track/index.html" target="_blank">
             <i class="fas fa-bookmark">&nbsp;</i>Investigative Project: "Navi Mumbai Metro: The story of a project that went off-track"
