--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,6 @@
 	<script src="bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
 
 	<style type="text/css" media="screen">
-		/**** Custom Styles	 *****/
 		.jumbotron {
 			text-align: center;
 			
@@ -75,9 +74,6 @@
 			margin: 35px auto 20px;
 			border-radius: 60%;
 		}
-	</style>
-	
-	<style>
 
 .topnav {
   overflow: hidden;
@@ -153,7 +149,6 @@ summary {
 summary::-webkit-details-marker {
   display: none;
 }
-
 </style>	
 </head>
 <body>
@@ -324,8 +319,10 @@ bylines in my name so far across four publications.</p>
   <summary>
     <b>Click here to expand and see my data visualisations</b>
     <span class="icon">👇</span>
-  </summary>
- <iframe title="UP 2022: Voter Turnout in Phase 6 (in percentages)" aria-label="Grouped Column Chart" id="datawrapper-chart-OXMoQ" src="https://datawrapper.dwcdn.net/OXMoQ/5/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="325"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();</script>
+  </summary><br>
+<div class="infogram-embed" data-id="6e16e3ff-6ca4-4541-841f-98a04dae6f68" data-type="interactive" data-title="Goa&amp;#39;s unemployment problem"></div><script>!function(e,i,n,s){var t="InfogramEmbeds",d=e.getElementsByTagName("script")[0];if(window[t]&&window[t].initialized)window[t].process&&window[t].process();else if(!e.getElementById(n)){var o=e.createElement("script");o.async=1,o.id=n,o.src="https://e.infogram.com/js/dist/embed-loader-min.js",d.parentNode.insertBefore(o,d)}}(document,0,"infogram-async");</script><hr>
+<hr>
+<iframe title="UP 2022: Voter Turnout in Phase 6 (in percentages)" aria-label="Grouped Column Chart" id="datawrapper-chart-OXMoQ" src="https://datawrapper.dwcdn.net/OXMoQ/5/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="325"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();</script>
 <hr>
 <div class='tableauPlaceholder' id='viz1650452293100' style='position: relative'><noscript><a href='#'><img alt='Cumulative C02 emissions (1750-2020) ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Wh&#47;Whopollutesthemost&#47;Sheet1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Whopollutesthemost&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Wh&#47;Whopollutesthemost&#47;Sheet1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1650452293100');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 <hr>
@@ -333,9 +330,20 @@ bylines in my name so far across four publications.</p>
 <hr>
 <div class='tableauPlaceholder' id='viz1650453490600' style='position: relative'><noscript><a href='#'><img alt='Climate finance provided by OECD countries ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cl&#47;ClimatefundingbyOECD&#47;Sheet1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='ClimatefundingbyOECD&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Cl&#47;ClimatefundingbyOECD&#47;Sheet1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1650453490600');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 <hr>
-<div class="flourish-embed" data-src="story/1162426"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+<iframe title="Breakdown of the sales revenue of KSBC" aria-label="Stacked Bars" id="datawrapper-chart-he3sC" src="https://datawrapper.dwcdn.net/he3sC/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="259"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script>
+<hr>
+<iframe title="Brent Crude Price" aria-label="Interactive line chart" id="datawrapper-chart-ox4ZF" src="https://datawrapper.dwcdn.net/ox4ZF/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script>
+<hr>
+<iframe title="India's GDP is estimated to grow by 8.9% in FY22" aria-label="Column Chart" id="datawrapper-chart-1EaiD" src="https://datawrapper.dwcdn.net/1EaiD/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script>
+<hr>
+<div class="infogram-embed" data-id="0569f89b-d669-4135-85a0-8bd46cd46af6" data-type="interactive" data-title="Assembly Elections 2022 Live Updates"></div><script>!function(e,i,n,s){var t="InfogramEmbeds",d=e.getElementsByTagName("script")[0];if(window[t]&&window[t].initialized)window[t].process&&window[t].process();else if(!e.getElementById(n)){var o=e.createElement("script");o.async=1,o.id=n,o.src="https://e.infogram.com/js/dist/embed-loader-min.js",d.parentNode.insertBefore(o,d)}}(document,0,"infogram-async");</script><center><i>This was being updated live on the counting day.</i></center>
 <hr>
 <iframe title="Polarised opinion on CAA-NRC benefited AAP in 2020 Delhi Assembly Elections" aria-label="Table" id="datawrapper-chart-JtiJT" src="https://datawrapper.dwcdn.net/JtiJT/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="695"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();</script>
+<hr>
+<div class="flourish-embed" data-src="story/1162426"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 </details>
 	
   </div>
@@ -349,9 +357,7 @@ bylines in my name so far across four publications.</p>
 
 			<div class="featurette" id="resume">
 				<h2 class="featurette-heading">Resume</h2>
-				<div class="row">
 					<a href="https://sreedev98.github.io/Sreedev%20Krishnakumar_CV.pdf" target="_blank">Click here to view/download my resume</a>
-				</div>
 			</div>
 
 			<hr class="featurette-divider">
@@ -363,7 +369,6 @@ bylines in my name so far across four publications.</p>
 					
 					<div>
 						<a href="mailto: &#115;&#114;&#101;&#101;&#100;&#101;&#118;&#057;&#056;&#064;&#112;&#114;&#111;&#116;&#111;&#110;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"">&#115;&#114;&#101;&#101;&#100;&#101;&#118;&#057;&#056;&#064;&#112;&#114;&#111;&#116;&#111;&#110;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a>
-					</div>
 
 				</div>
 			</div>
