--- a/portfolio.html
+++ b/portfolio.html
@@ -181,7 +181,7 @@ function myFunction() {
         <img src="userimage_resize.jpeg" alt="Profile Picture">
     </a>
 					<h1>Hello! I'm Sreedev Krishnakumar.</h1>
-					<p class="lead">This is my digital portfolio showcasing the notable stories I have done till date.</p>
+					<p class="lead">This is my digital portfolio showcasing various stories and data visualisations I have done till date.</p>
 			</div>
 		</div>
 
@@ -196,7 +196,7 @@ function myFunction() {
 				<div class="row">
 					<div>
 						<p class="lead">I am a multimedia journalist with skills in all forms of reporting and storytelling. I have done a Postgraduate Diploma in Integrated Journalism from the Asian College of Journalism and have 16
-bylines in my name so far across four publications.</p>
+bylines in my name so far across four publications (The Hindu, The Citizen, The Print, and Livewire).</p>
 					</div>
 				</div>
 			</div>
